--- a/hw5/02-beverages.css
+++ b/hw5/02-beverages.css
@@ -3,20 +3,18 @@
   height: 80px;
 }
 
-figure {
+.figure {
   width: 200px;
-  margin: 0.4rem;
+  margin: 0.5rem;
   border: 0.5rem solid var(--white);
 }
 
-figcaption {
-  margin: 0.5rem 0;
-  margin-top: 1em;
+.figcaption {
+  margin: 1rem 0 0.5rem 0;
   padding: 0.25rem;
-  text-align: center;
 }
 
-figure:hover {
+.figure:hover {
   border: 0.5rem solid var(--purple);
   background-color: var(--purple);
   color: var(--white);
