--- a/hw2/05-form.css
+++ b/hw2/05-form.css
@@ -4,16 +4,6 @@ fieldset {
   padding: 0;
 }
 
-input {
-  border: 1px solid var(--gray4);
-  font-size: 1.1rem;
-}
-
-.title {
-  text-align: center;
-  text-transform: uppercase;
-}
-
 .form {
   margin: 40px auto;
   border: 1px solid var(--gray4);
@@ -21,52 +11,37 @@ input {
   padding: 1rem;
 }
 
+.title {
+  text-align: center;
+  text-transform: uppercase;
+}
+
 .form-element {
-  height: 30px;
   margin-bottom: 2rem;
 }
 
-fieldset.form-element {
-  margin-bottom: 4em;
-}
-
-.input-label,
-legend {
+.input-label {
   font-weight: 600;
 }
 
 .input-element {
   display: block;
   width: 70%;
+  height: 24px;
   float: right;
-}
-
-.radios > input {
-  display: inline-block;
-  width: 10%;
-}
-
-.radios > label {
-  display: inline-block;
-  width: 85%;
+  border: 1px solid var(--gray4)
 }
 
 .btn {
   width: 49%;
-  height: 40px;
-  border-radius: 3px;
-  padding: 0.5rem;
   border: 1px solid var(--green);
+  padding: 0.5rem;
+  font-size: 1.1rem;
 }
 
 .btn-primary {
   background-color: var(--green);
   color: var(--white);
-}
-
-.btn-secondary {
-  background-color: var(--white);
-  color: var(--green);
 }
 
 .btn-primary:hover {
@@ -75,6 +50,11 @@ legend {
   color: var(--black);
 }
 
+.btn-secondary {
+  background-color: var(--white);
+  color: var(--green);
+}
+
 .btn-secondary:hover {
-  background-color: rgba(255, 165, 0, 0.1);
+  background-color: rgba(176, 226, 176, 0.5);
 }
